tests/error/array_multi_oob.gw
#! [contains] ArrayOutofBounds
var Object o[1][1];
o[1];
